--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Unlock VIP features, game hacks, and unlimited resources with the best executors
 				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 						<div class="app-item-content">
 							<img src="images/scripts logo.png" class="app-icon-img img-fluid">
-							<div class="app-title">ROBLOX SCRIPTS</div>
+							<div class="app-title">GROW A GARDEN SCRIPTS</div>
 							<div class="app-link-wrapper">
 								<a href="https://scriptszone.vercel.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
