--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <meta name="description" content="🔥 Premium Executors & Scripts – 100% Free (iOS & Android)
 Unlock VIP features, game hacks, and unlimited resources with the best executors & scripts—no root or jailbreak needed!">
   <meta charset="UTF-8">
+  <!-- SEO Tags for Landing Page -->
+  <meta name="keywords" content="grow a garden script, grow a garden roblox script, roblox grow a garden script, script grow a garden, grow a garden script pastebin, grow a garden script 2025, delta executor grow a garden, grow a garden auto farm, grow a garden dupe script, grow a garden item stealer, grow a garden no key, grow a garden script mobile, grow a garden hack, grow a garden roblox hack, free grow a garden script, roblox script grow a garden, grow a garden script download, grow a garden roblox 2025, grow a garden script pc, grow a garden delta executor, grow a garden mod script">
 
   <!-- Correct Favicon (use PNG or ICO for best browser support) -->
   <link rel="icon" href="images/favicon.png" type="image/png">
