--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<img src="images/scripts logo.png" class="app-icon-img img-fluid">
 							<div class="app-title">GROW A GARDEN SCRIPTS</div>
 							<div class="app-link-wrapper">
-								<a href="https://scriptszone.vercel.app/"><span class="lnr lnr-download"></span>Install</a>
+								<a href="https://scriptschecker.netlify.app/"><span class="lnr lnr-download"></span>Install</a>
 							</div>
 						</div>
 					</div>
