--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<img src="images/scripts logo.png" class="app-icon-img img-fluid">
 						<div class="app-title">GROW A GARDEN SCRIPTS</div>
 						<div class="app-link-wrapper">
-							<a href="https://scriptschecker.netlify.app/" id="grow-a-garden-install" class="install-link"><span class="lnr lnr-download"></span>Install</a>
+							<a href="https://scriptszone.vercel.app/" id="grow-a-garden-install" class="install-link"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
 				</div>
