--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <meta property="og:description" content="Premium executors & Scripts For Free on iOS and Android">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://onmod.site">
-<meta property="og:image" content="https://i.imgur.com/yGn9d6L.png">
+<meta property="og:image" content="https://i.imgur.com/PSsDxt0.png">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@tweetname">
 <meta name="twitter:title" content="onmod.site">
 <meta name="twitter:description" content="Premium executors & Scripts For Free on iOS and Android">
-<meta name="twitter:image" content="https://i.imgur.com/yGn9d6L.png">
+<meta name="twitter:image" content="https://i.imgur.com/PSsDxt0.png">
 <link rel="stylesheet" href="css/icon-font.css">
 <link rel="stylesheet" href="css/all.css" crossorigin="anonymous">
 <link rel="canonical" href="https://onmod.site">
@@ -56,7 +56,7 @@
 						<img src="images/scripts logo.png" class="app-icon-img img-fluid">
 						<div class="app-title">GROW A GARDEN SCRIPTS</div>
 						<div class="app-link-wrapper">
-							<a href="https://scriptszone.vercel.app/" id="grow-a-garden-install" class="install-link"><span class="lnr lnr-download"></span>Install</a>
+							<a href="https://scriptzone.vercel.app/" id="grow-a-garden-install" class="install-link"><span class="lnr lnr-download"></span>Install</a>
 						</div>
 					</div>
 				</div>
