--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <head>
-<!-- Existing head content remains unchanged -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-J1BSNLE03B"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C68DXVJ2PZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-J1BSNLE03B');
+
+  gtag('config', 'G-C68DXVJ2PZ');
 </script>
 <title>Premium executors & Scripts For Free on iOS and Android</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
