--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<div class="app-item" style="position: absolute; left: 192.5px; top: 248.4px;">
 					<div class="app-item-content">
 						<img src="images/scripts logo.png" class="app-icon-img img-fluid">
-						<div class="app-title">GROW A GARDEN SCRIPTS</div>
+						<div class="app-title">99 NIGHTS IN FOREST SCRIPTS</div>
 						<div class="app-link-wrapper">
 							<a href="https://scriptzone.vercel.app/" id="grow-a-garden-install" class="install-link"><span class="lnr lnr-download"></span>Install</a>
 						</div>
